v1.0.3 (Sep xx, 2005)

	- OPML export/import
	- Support for simple content filtering (expression should be valid regexp)
	- Reworked preferences dialog

v1.0.2 (Sep 02, 2005)

	- Another bugfix release.

v1.0.1 (Aug 30, 2005)

	- Bugfix release, several issues fixed.

v1.0   (Aug 27, 2005)

	- Limited support for keyboard navigation
	- Feed information editor
	- Support for feed icons (favicon.ico fetched from site)
	- Background feed updates
	- Update detection based on content checksum (somewhat flaky)
	- Automatically cleanup posts older then specified number of days
	- More or less compatible with MSIE (tested on 5.0)

	- Milestone 0.2 changed to 1.0

v0.1   (Aug 22, 2005)

	- First public version, implemented most basic functionality