@@ -1,17 +1,8 @@
-1.0
-
-+ feed editor
-+ feed icons
-+ background feed updates
-+ update detection based on content checksum
-+ cleanup posts older then specified number of days
-~ keyboard navigation
-+ support for channel -> image -> url (like in LJ feeds)
-
 1.1
 
 - better error handling
-- keyboard navigation
+- better keyboard navigation
+- filters (by content/title/feed?)
 
 Mysterious Future
 
