@@ -1,7 +1,8 @@
 v1.0.3 (Sep xx, 2005)
 
 	- OPML export/import
-	- Support for simple content filtering (expression should be valid regexp)
+	- Support for simple content filtering (expression should be valid regexp,
+	  checking is case insensitive)
 	- Reworked preferences dialog
 
 v1.0.2 (Sep 02, 2005)
